--- a/MessagingTutorial/src/main/res/layout/activity_list_users.xml
+++ b/MessagingTutorial/src/main/res/layout/activity_list_users.xml
@@ -1,10 +1,28 @@
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp"
     tools:context="com.sinch.messagingtutorial.app.ListUsersActivity"
-    android:background="@color/off_white"
-    android:id="@+id/usersListView">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
 
-</ListView>
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/logout"
+        android:id="@+id/logoutButton"
+        android:gravity="center_vertical|center_horizontal"
+        android:layout_gravity="center_horizontal"
+        android:background="@color/dark_gray"
+        android:textSize="24sp"
+        android:padding="15dp"
+        android:textColor="@color/sinch_purple" />
+
+    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="16dp"
+        android:background="@color/off_white"
+        android:id="@+id/usersListView">
+    </ListView>
+
+</LinearLayout>
